--- a/measure/iv-micronova-10V_1Vfw.yaml
+++ b/measure/iv-micronova-10V_1Vfw.yaml
@@ -26,9 +26,6 @@ measure:
   - name: anode_current
     command: ":DATA? 'I1'"
     type: "query_ascii_values"
-  - name: guard_current
-    command: ":DATA? 'I2'"
-    type: "query_ascii_values"
   - name: cathode_current
     command: ":DATA? 'I3'"
     type: "query_ascii_values"
@@ -37,7 +34,6 @@ chips:
   - voltage_input:
     anode_current:
     cathode_current:
-    guard_current:
 
 setups:
   - name: 0.01v sweep
@@ -50,10 +46,9 @@ setups:
       - ":PAGE:CHAN:SMU3:MODE V"
       - ":PAGE:CHAN:SMU4:MODE V"
 
-      - ":PAGE:CHAN:SMU1:FUNC CONS"  # sets the function (FCTN) of SMU1. Anode
-      - ":PAGE:CHAN:SMU2:FUNC CONS"  # sets the function (FCTN) of SMU2. Guard ring
-      - ":PAGE:CHAN:SMU3:FUNC VAR1"  # sets the function (FCTN) of SMU3. Cathode
-      - ":PAGE:CHAN:SMU4:FUNC CONS"  # sets the function (FCTN) of SMU4. Not connected
+      - ":PAGE:CHAN:SMU1:FUNC CONS"  # sets the function (FCTN) of SMU1. SMU1 - Emitter
+      - ":PAGE:CHAN:SMU2:FUNC CONS"  # sets the function (FCTN) of SMU1. SMU1 - Emitter
+      - ":PAGE:CHAN:SMU3:FUNC VAR1"  # sets the function (FCTN) of SMU3. SMU3 - Base
 
       - ":PAGE:CHAN:MODE SWEEP"  # sets the sweep measurement mode
 
@@ -64,22 +59,23 @@ setups:
       - ":PAGE:MEAS:VAR1:STEP 0.001"  # sets the sweep STEP value of VAR1 for the linear sweep.
       - ":PAGE:MEAS:VAR1:STOP -0.01"  # sets the sweep STOP value of VAR1.
       - ":PAGE:MEAS:VAR1:COMP 0.1"  # sets the COMPLIANCE value of VAR1.
-      - ":PAGE:MEAS:VAR1:PCOM:STATE OFF"  # sets the power compliance of VAR1 to disable
       #      - ":PAGE:MEAS:HTIM 0"  # sets the HOLD TIME of sweep measurement
       #      - ":PAGE:MEAS:DEL 0"  # sets the DELAY TIME of SMU.
 
       - ":PAGE:MEAS:CONS:SMU1 0"  # sets the constant SOURCE value of SMU1 for sweep measurements
-      - ":PAGE:MEAS:CONS:SMU2 0"
-      - ":PAGE:MEAS:CONS:SMU4 0"  # sets the constant SOURCE value of SMU4 for sweep measurements
+      - ":PAGE:MEAS:CONS:SMU3 0"  # sets the constant SOURCE value of SMU3 for sweep measurements
 
       # Integration time
       - ":PAGE:MEAS:MSET:ITIM SHORT"
-      - ":PAGE:MEAS:CONS:SMU1:COMP 0.1"
-      - ":PAGE:MEAS:CONS:SMU2:COMP 0.1"
 
-      - ":PAGE:DISP:LIST 'V3','I1','I2'"  # selects the variable names for LIST display
+
+      - ":PAGE:DISP:LIST 'V3','I1','I3'"  # selects the variable names for LIST display
       - ":PAGE:GLIS:SCAL:AUTO ONCE"
     program:
+      minimum:
+        x: voltage_input
+        y: anode_current
+        timeout: 0.5
       validation:
         anode_current[0]:
           min:
@@ -93,7 +89,7 @@ setups:
       condition_kwargs:
         int_time: SHORT
 
-  - name: 100v sweep
+  - name: 20v sweep
     instrument:
       - "*CLS" # clears the Error Queue
       - "*RST" # performs an instrument reset
@@ -101,36 +97,32 @@ setups:
       - ":PAGE:CHAN:SMU2:MODE V"
       - ":PAGE:CHAN:SMU3:MODE V"
       - ":PAGE:CHAN:SMU4:MODE V"
-      - ":PAGE:CHAN:SMU1:FUNC CONS"  # sets the function (FCTN) of SMU1. Anode
-      - ":PAGE:CHAN:SMU2:FUNC CONS"  # sets the function (FCTN) of SMU2 Guard ring
-      - ":PAGE:CHAN:SMU3:FUNC VAR1"  # sets the function (FCTN) of SMU3 Cathode
-      - ":PAGE:CHAN:SMU4:FUNC CONS"  # sets the function (FCTN) of SMU4. Not connected
+      - ":PAGE:CHAN:SMU1:FUNC CONS"  # sets the function (FCTN) of SMU1. SMU1 - Emitter
+      - ":PAGE:CHAN:SMU2:FUNC CONS"  # sets the function (FCTN) of SMU2
+      - ":PAGE:CHAN:SMU3:FUNC VAR1"  # sets the function (FCTN) of SMU3. SMU3 - Base
       - ":PAGE:CHAN:MODE SWEEP"  # sets the sweep measurement mode
 
       - ":PAGE:MEAS:VAR1:MODE SINGLE"  # sets the SWEEP MODE of VAR1 for sweep measurement.(Single)
       - ":PAGE:MEAS:VAR1:SPAC LIN"  # selects the sweep type of VAR1 as linear staircase
-      - ":PAGE:MEAS:VAR1:START 100"  # sets the sweep START value of VAR1.
-      - ":PAGE:MEAS:VAR1:STEP -1"  # sets the sweep STEP value of VAR1 for the linear sweep.
-      - ":PAGE:MEAS:VAR1:STOP -2"  # sets the sweep STOP value of VAR1.
-      - ":PAGE:MEAS:VAR1:COMP 0.01"  # sets the COMPLIANCE value of VAR1.
-      - ":PAGE:MEAS:VAR1:PCOM:STATE OFF"
+      - ":PAGE:MEAS:VAR1:START 10"  # sets the sweep START value of VAR1.
+      - ":PAGE:MEAS:VAR1:STEP -0.2"  # sets the sweep STEP value of VAR1 for the linear sweep.
+      - ":PAGE:MEAS:VAR1:STOP -1"  # sets the sweep STOP value of VAR1.
+      - ":PAGE:MEAS:VAR1:COMP 0.05"  # sets the COMPLIANCE value of VAR1.
       #      - ":PAGE:MEAS:HTIM 0"  # sets the HOLD TIME of sweep measurement
       #      - ":PAGE:MEAS:DEL 0"  # sets the DELAY TIME of SMU.
+
       # Integration time
-      - ":PAGE:MEAS:MSET:ITIM MED"
-      - ":PAGE:MEAS:CONS:SMU1:COMP 0.1"
-      - ":PAGE:MEAS:CONS:SMU2:COMP 0.1"
+      - ":PAGE:MEAS:MSET:ITIM SHORT"
 
       - ":PAGE:MEAS:CONS:SMU1 0"  # sets the constant SOURCE value of SMU1 for sweep measurements
-      - ":PAGE:MEAS:CONS:SMU4 0"  # sets the constant SOURCE value of SMU3 for sweep measurements
-      - ":PAGE:MEAS:CONS:SMU2 0"
+      - ":PAGE:MEAS:CONS:SMU3 0"  # sets the constant SOURCE value of SMU3 for sweep measurements
 
-      - ":PAGE:DISP:LIST 'V3','I1','I2'"  # selects the variable names for LIST display
+      - ":PAGE:DISP:LIST 'V3','I1','I3'"  # selects the variable names for LIST display
     program:
       validation:
-        anode_current[-2]: # -1 volt
+        anode_current[-3]: # -1 volt
           min:
-            value: !!float 1e-3
+            value: !!float 5e-3
             message: Current leakage is too low. Check if there is a good contact.
       condition_kwargs:
-        int_time: MED
+        int_time: SHORT
