Added new command iva that makes summary of all data of each chip, not just the latest measurement.
Added support for Murkku (CM) chips

Fixed acceptance limit check so that it works also
in cases when chip type has more than one letters

Fixed histogram scaling to follow same quantile
settings as colormap

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,6 +12,13 @@
             "args": ["summary", "iv", "-w", "CA14", "-t", "X"]
         },
         {
+            "name": "Summary iva",
+            "type": "debugpy",
+            "request": "launch",
+            "module": "analyzer",
+            "args": ["summary", "iva", "-w", "CA15", "-t", "U"]
+        },
+        {
             "name": "Python: Current File",
             "type": "python",
             "request": "launch",
